fix: CORS error with Spring Security